fix(accordion): set text-align start on button

--- a/packages/accordion/accordion.pcss
+++ b/packages/accordion/accordion.pcss
@@ -28,6 +28,7 @@
     gap: var(--sds-space-gap-medium);
     justify-content: space-between;
     width: 100%;
+    text-align: start;
 
     &:hover,
     &:focus-visible {
